--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,4 +31,14 @@
   background-color: var(--primary-color);
   border-color: var(--primary-color);
   margin-top: 30px;
+  color: var(--white-color);
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
