--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -279,3 +279,21 @@ body {
   color: var(--white-color);
   height: 45px;
 }
+
+.alert-container {
+  padding: 3px 39px;
+  background: rgba(0, 255, 133, 0.1);
+  border-radius: 2px;
+  margin: 0
+}
+
+.alert-text {
+  color: #00FF47;
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 14px;
+  opacity: 1;
+  margin: 0
+}
