--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 
 body {
   font-family: Product Sans;
+  background: #E5E5E5;
 }
 
 .primary-color {
@@ -295,4 +296,33 @@ body {
   line-height: 14px;
   opacity: 1;
   margin: 0
+}
+
+.form-input {
+  height: 50px;
+  margin-bottom: 24px;
+
+  background: rgba(188, 188, 188, 0.25);
+  border: 2px solid #BCBCBC;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.btn-form {
+  width: 412px;
+  height: 45px;
+  align-items: center;
+
+  background-color: var(--primary-color);
+  border-radius: 10px;
+}
+
+.btn-form-text {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  align-items: center;
+  color: var(--white-color);
 }
